--- a/src/app/components/dialog-map/dialog-map.component.html
+++ b/src/app/components/dialog-map/dialog-map.component.html
@@ -1,5 +1,4 @@
-<div mat-dialog-content>
-  <main>
-    <app-map [map]="map"></app-map>
-  </main>
-</div>
+<mat-dialog-content>
+  <app-map class="test1"></app-map>
+  <div class="test"><app-panel-info [info]="info"></app-panel-info></div>
+</mat-dialog-content>
