--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <button id="BtnCarte" mat-raised-button color="primary" (click)="openDialog()">
     <b>Ouvrir la carte</b>
   </button>
+  <div #element1 id="1"></div>
   <div id="info">Cartographie</div>
   <div id="Title">La guerre des points d'eau dans le Jura !!!</div>
   <div id="info">Par Clément MERLE / Le 02-01-2025</div>
@@ -30,6 +31,7 @@
       <li>Le Jura est un département relativement rural et réputé pour la randonnée, cela rentrait parfaitement dans le sujet.</li>
       <li>Point Bonus : EPCI frontalière avec un autre pays.</li>
     </ul>
+    <p #element2 id ="2"></p>
     <p>Ci-dessous, une carte de localisation de l'EPCI : </p>
   </div>
   
