--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,4 +1,7 @@
-html, body {
+.map-container {
+    width: 100%;
     height: 100%;
-    }
-    
+    min-height: 1000px; /* 🔥 Ajuste si nécessaire */
+    flex: 1; /* 🔥 S’étend automatiquement */
+  }
+  
