--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,8 @@
     margin-left: auto;
     margin-right: auto;  
     text-align: center;
-    width: 50%;
+    min-width: 720px;
+    width: 40%;
     font-size: 40px;
     padding-bottom: 20px;
 }
@@ -15,7 +16,8 @@
 #Summary{
     font-size: 16px;
     padding: 20px;
-    width: 50%;
+    min-width: 720px;
+    width: 40%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -50,7 +52,8 @@
 }
 
 .container {
-    width: 50%;
+    min-width: 720px;
+    width: 40%;
     position: relative;
     display: block;
     margin-left: auto;
@@ -71,8 +74,40 @@
 .content{
     font-size: 14px;
     padding: 20px;
-    width: 50%;
+    min-width: 720px;
+    width: 40%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}  
+}
+
+.function{
+    margin: auto;
+    width: 50%;
+    border: 1px solid black;
+    padding: 20px;
+    font-style: italic;
+    text-align: center;
+}
+
+.image{
+    max-width:80%;
+    outline: 1px solid black;
+    cursor: pointer;
+    margin: 20px;
+}
+
+.schema{
+    max-width:80%;
+    margin: 20px;
+}
+
+.image:hover{
+    filter: brightness(110%);
+}
+
+.image-content{
+    display: flex;
+    justify-content: center; 
+    align-items: center
+}
