--- a/src/app/components/dialog-map/dialog-map.component.css
+++ b/src/app/components/dialog-map/dialog-map.component.css
@@ -14,7 +14,7 @@
     top: 30px;
     right: 30px;
     height: 90vh - 60px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgb(220, 220, 220, 0.5);
     width: 25%;
     word-wrap: break-word;
 }
