--- a/src/app/components/panel-info/panel-info.component.css
+++ b/src/app/components/panel-info/panel-info.component.css
@@ -1,2 +1,30 @@
-#manager{
-}
+.svg-box, .image-box {
+    margin-right: 10px;
+    max-height: 35px;
+    max-width: 35px;
+  }
+  
+  .bold-text {
+    font-weight: bold;
+  }
+  
+  .container {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+  }
+  
+  .Imp{
+      font-size: 18px;
+      font-weight: bold;
+  }
+
+  #manager{
+    max-height: 80vh; /* Adapte à l'écran */
+    max-width: auto;
+    overflow-y: auto; /* Ajoute un scroll si nécessaire */      
+  }
+
+  .mat-mdc-select{
+      width: 400px;
+  }
