--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,5 +1,9 @@
-<!-- <apx-chart 
-  [series]="chartOptions.series" 
-  [chart]="chartOptions.chart" 
-  [labels]="chartOptions.labels">
-</apx-chart> -->
+<div class="chart-container">
+  <apx-chart class="chart"
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [labels]="chartOptions.labels"
+    [title]="chartOptions.title"
+    [legend]="chartOptions.legend">
+  </apx-chart>
+</div>
