--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,7 +1,7 @@
 .map-container {
     width: 100%;
-    height: 100%;
-    min-height: 1000px; /* 🔥 Ajuste si nécessaire */
+    /* height: 100%; */
+    /* min-height: 1000px; 🔥 Ajuste si nécessaire */
     flex: 1; /* 🔥 S’étend automatiquement */
   }
   
